<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_kdl_ik</name>
  <version>0.1.0</version>
  <description>The crane_x7_kdl_ik package</description>

  <author email="vghjjj@gmail.com">Shota Hirama</author>
  <maintainer email="vghjjj@gmail.com">Shota Hirama</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_parser_py</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>kdl_parser_py</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
  </export>
</package>
